- overlay (spinner) async operatios are not collected in a global array - small css fixed on spinner.scss - fixed webkit erating scrolling on mobile devices - dialog destory() now waits for possible unfinished processes before actually destroying the instance - serverconnection now catches login events and stores session data locally, to use on every request

--- a/css/modaloverlay.scss
+++ b/css/modaloverlay.scss
@@ -8,7 +8,7 @@ div.BFModalOverlay {
 	bottom:0;
 	cursor:wait;
 	transition:all 1s ease-in-out;
-	opacity:0.85;
+	opacity:0.95;
 }
 
 div.BFModalOverlay.inheritBackground {
